Docs: Resolve horizontal scroll issue with some examples

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -400,6 +400,7 @@ h4 {
 // Example container
 .cf-example {
     padding: 1rem;
+    overflow: auto;
     background-color: #fff;
     border: 1px solid #e1e1e8;
     border-radius: .25rem .25rem 0 0;
